err/pylint-extra.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/astroid'...
Listing './lib/python3.5/site-packages/astroid/brain'...
Listing './lib/python3.5/site-packages/astroid/interpreter'...
Listing './lib/python3.5/site-packages/astroid/interpreter/_import'...
Listing './lib/python3.5/site-packages/astroid/tests'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/SSL1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/absimp'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/absimp/sidepackage'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/all.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python2/data/all.py", line 7
    def func(): print 'yo'
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/appl'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/contribute_to_namespace'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/contribute_to_namespace/namespace_pep_420'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/find_test'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/foogle'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/foogle/fax'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/invalid_encoding.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python2/data/invalid_encoding.py", line 0
SyntaxError: unknown encoding: lala

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/lmfp'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/module.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python2/data/module.py", line 32
    except ValueError, ex:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/module1abs'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/module2.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python2/data/module2.py", line 78
    exec 'c = 3'
               ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/namespace_pep_420'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/noendingnewline.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python2/data/noendingnewline.py", line 21
    print 'a'
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/notamodule'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/package/subpackage'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_1/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_2'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_2/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_3'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkg_resources_3/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_1/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_2'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_2/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_3'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/path_pkgutil_3/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/unicode_package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python2/data/unicode_package/core'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/SSL1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/absimp'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/absimp/sidepackage'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/appl'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/contribute_to_namespace'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/contribute_to_namespace/namespace_pep_420'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/find_test'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/foogle'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/foogle/fax'...
Compiling './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/invalid_encoding.py'...
***   File "./lib/python3.5/site-packages/astroid/tests/testdata/python3/data/invalid_encoding.py", line 0
SyntaxError: unknown encoding: lala

Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/lmfp'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/module1abs'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/namespace_pep_420'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/notamodule'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/package/subpackage'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_1/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_2'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_2/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_3'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkg_resources_3/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_1'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_1/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_2'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_2/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_3'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/path_pkgutil_3/package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/unicode_package'...
Listing './lib/python3.5/site-packages/astroid/tests/testdata/python3/data/unicode_package/core'...
Listing './lib/python3.5/site-packages/astroid-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/lazy_object_proxy'...
Listing './lib/python3.5/site-packages/lazy_object_proxy-1.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylint_extra'...
Listing './lib/python3.5/site-packages/pylint_extra-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/wrapt'...
Listing './lib/python3.5/site-packages/wrapt-1.10.11.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
